--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <section class="hero">
             <div class="container">
                 <h1 class="hero-capt">Эффективные решения для вашего бизнеса</h1>
-                <button type="button" class="btn">Заказать услугу</button>
+                <button type="button" class="btn" data-modal-open>Заказать услугу</button>
             </div>
         </section>
         <!-- Section our advantage -->
@@ -363,5 +363,12 @@
             </div>
         </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <svg class="modal-icon-close" width="18" height="18" data-modal-close>
+                <use href="./images/icons.svg#icon-close"></use>
+            </svg></div>
+    </div>
+    <script src="./js/modal.js"></script>
 </body>
 </html>
