--- a/index.html
+++ b/index.html
@@ -100,9 +100,18 @@
             <div class="container">
                 <h2 class="section-caption">Чем мы занимаемся</h2>
                 <ul class="what-list list">
-                    <li class="what-item"><img src="./images/what-we-do/box1.jpg" alt="hand on keyboard" width="370" class="img"></li>
-                    <li class="what-item"><img src="./images/what-we-do/box2.jpg" alt="phone in hand" width="370"  class="img"></li>
-                    <li class="what-item"><img src="./images/what-we-do/box3.jpg" alt="laptop in hand" width="370" class="img"></li>
+                    <li class="what-item">
+                        <img src="./images/what-we-do/box1.jpg" alt="hand on keyboard" width="370" class="img">
+                        <p class="what-text">Десктопные приложения</p>
+                    </li>
+                    <li class="what-item">
+                        <img src="./images/what-we-do/box2.jpg" alt="phone in hand" width="370"  class="img">
+                        <p class="what-text">Мобильные приложения</p>
+                    </li>
+                    <li class="what-item">
+                        <img src="./images/what-we-do/box3.jpg" alt="laptop in hand" width="370" class="img">
+                        <p class="what-text">Дизайнерские решения</p>
+                    </li>
                 </ul>
             </div>
         </section>
@@ -365,9 +374,12 @@
     </footer>
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-            <svg class="modal-icon-close" width="18" height="18" data-modal-close>
-                <use href="./images/icons.svg#icon-close"></use>
-            </svg></div>
+            <button type="button" class="modal-icon-close">
+                <svg width="18" height="18" data-modal-close>
+                    <use href="./images/icons.svg#icon-close"></use>
+                </svg>
+            </button>
+        </div>
     </div>
     <script src="./js/modal.js"></script>
 </body>
