--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,11 @@
                 <ul class="gallery list">
                     <li class="gallery-item">
                         <a href="./portfolio.html" class="gallery-link link">
-                            <img src="./images/partfolio/img1.jpg" alt="Веб-сайт на ноутбуке" width="370" class="img">
+                            <div class="gallery-wrap">
+                                <img src="./images/partfolio/img1.jpg" alt="Веб-сайт на ноутбуке" width="370" class="img">
+                                <p class="gallery-cover-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить
+                                исчерпывающие сведения о компании или частном лице.</p>
+                            </div>
                             <div class="gallery-ptext">
                                 <h2 class="gallery-capt">Технокряк</h2>
                                 <p  class="gallery-text">Веб-сайт</p>
@@ -68,7 +72,10 @@
                     </li>
                     <li class="gallery-item">
                         <a href="./portfolio.html" class="gallery-link link"> 
-                            <img src="./images/partfolio/img2.jpg" alt="Блок в баскетболе" width="370" class="img">
+                            <div class="gallery-wrap">
+                                <img src="./images/partfolio/img2.jpg" alt="Блок в баскетболе" width="370" class="img">
+                                <p class="gallery-cover-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                            </div>
                             <div class="gallery-ptext">
                                 <h2 class="gallery-capt">Постер New Orlean vs Golden Star</h2>
                                 <p  class="gallery-text">Дизайн</p>
@@ -77,7 +84,10 @@
                     </li>
                     <li class="gallery-item">
                         <a href="./portfolio.html" class="gallery-link link">
-                            <img src="./images/partfolio/img3.jpg" alt="Рыба и надпись" width="370" class="img">
+                            <div class="gallery-wrap">
+                                <img src="./images/partfolio/img3.jpg" alt="Рыба и надпись" width="370" class="img">
+                                <p class="gallery-cover-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                            </div>
                             <div class="gallery-ptext">
                                 <h2 class="gallery-capt">Ресторан Seafood</h2>
                                 <p  class="gallery-text">Приложение</p>
@@ -86,7 +96,10 @@
                     </li>
                     <li class="gallery-item">
                         <a href="./portfolio.html" class="gallery-link link">
-                            <img src="./images/partfolio/img4.jpg" alt="Наушники" width="370" class="img">
+                            <div class="gallery-wrap">
+                                <img src="./images/partfolio/img4.jpg" alt="Наушники" width="370" class="img">
+                                <p class="gallery-cover-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                            </div>
                             <div class="gallery-ptext">
                                 <h2 class="gallery-capt">Проект Prime</h2>
                                 <p  class="gallery-text">Маркетинг</p>
@@ -95,7 +108,10 @@
                     </li>
                     <li class="gallery-item">
                         <a href="./portfolio.html" class="gallery-link link">
-                            <img src="./images/partfolio/img5.jpg" alt="Белая и коричневая коробка" width="370" class="img">
+                            <div class="gallery-wrap">
+                                <img src="./images/partfolio/img5.jpg" alt="Белая и коричневая коробка" width="370" class="img">
+                                <p class="gallery-cover-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                            </div>
                             <div class="gallery-ptext">
                                 <h2 class="gallery-capt">Проект Boxes</h2>
                                 <p  class="gallery-text">Приложение</p>
@@ -104,7 +120,10 @@
                     </li>
                     <li class="gallery-item">
                         <a href="./portfolio.html" class="gallery-link link">
-                            <img src="./images/partfolio/img6.jpg" alt="Сайт на мониторе" width="370" class="img">
+                            <div class="gallery-wrap">
+                                <img src="./images/partfolio/img6.jpg" alt="Сайт на мониторе" width="370" class="img">
+                                <p class="gallery-cover-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                            </div>
                             <div class="gallery-ptext">
                                 <h2 class="gallery-capt">Inspiration has no Borders</h2>
                                 <p  class="gallery-text">Веб-сайт</p>
@@ -113,7 +132,10 @@
                     </li>
                     <li class="gallery-item">
                         <a href="./portfolio.html" class="gallery-link link">
-                            <img src="./images/partfolio/img7.jpg" alt="Открытый журнал" width="370" class="img">
+                            <div class="gallery-wrap">
+                                <img src="./images/partfolio/img7.jpg" alt="Открытый журнал" width="370" class="img">
+                                <p class="gallery-cover-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                            </div>
                             <div class="gallery-ptext">
                                 <h2 class="gallery-capt">Издание Limited Edition</h2>
                                 <p  class="gallery-text">Дизайн</p>
@@ -122,7 +144,10 @@
                     </li>
                     <li class="gallery-item">
                         <a href="./portfolio.html" class="gallery-link link">
-                            <img src="./images/partfolio/img8.jpg" alt="Бирка с подписью" width="370" class="img">
+                            <div class="gallery-wrap">
+                                <img src="./images/partfolio/img8.jpg" alt="Бирка с подписью" width="370" class="img">
+                                <p class="gallery-cover-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                            </div>
                             <div class="gallery-ptext">
                                 <h2 class="gallery-capt">Проект LAB</h2>
                                 <p class="gallery-text">Маркетинг</p>
@@ -131,7 +156,10 @@
                     </li>
                     <li class="gallery-item">
                         <a href="./portfolio.html" class="gallery-link link">
-                            <img src="./images/partfolio/img9.jpg" alt="Пальцы на клавиатуре ноутбука" width="370" class="img">
+                            <div class="gallery-wrap">
+                                <img src="./images/partfolio/img9.jpg" alt="Пальцы на клавиатуре ноутбука" width="370" class="img">
+                                <p class="gallery-cover-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                            </div>
                             <div class="gallery-ptext">
                                 <h2 class="gallery-capt">Growing Business</h2>
                                 <p class="gallery-text">Приложение</p>
